--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!--General-->
-    <string name="app_name">Movie Check</string>
+    <string name="app_name">Movie Planet</string>
     <string name="sharedpreferences">sharedpreferences_moviecheck</string>
     <string name="sharedpreferences_loggeduser">sharedpreferences_loggeduser_moviecheck</string>
     <string name="sharedpreferences_hasreadtutorial">sharedpreferences_hasreadtutorial_moviecheck</string>
